# tla-ai-amplifier

./: .env.example  .envrc  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  SETUP.org  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: DEVELOPMENT.md
examples/: counter.py  producer_consumer_sim.py  trace_analyzer.py
specs/: Counter.cfg  Counter.tla  ProducerConsumer.cfg  ProducerConsumer.tla
workflows/: tla-workflow.org
