[project]
name = "tla-ai-amplifier"
version = "0.1.0"
description = "TLA+ examples demonstrating AI-assisted formal specification development"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Aidan Pace", email = "apace@defrecord.com"}
]
requires-python = ">=3.8"
dependencies = [
    "pytest>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/aygp-dr/tla-ai-amplifier"
Repository = "https://github.com/aygp-dr/tla-ai-amplifier"
Issues = "https://github.com/aygp-dr/tla-ai-amplifier/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["examples"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E203", "E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"